--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,6 @@ deploy:
   bucket_path: "docker-test-react"
   on:
     branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
   # Docker-react-test-env.eba-ky2b4gv2.eu-central-1.elasticbeanstalk.com
