fixed branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   bucket_name: "elasticbeanstalk-eu-central-1-066099387085"
   bucket_path: "docker-test-react"
   on:
-    branch: master
+    branch: main
   access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key: "$AWS_SECRET_KEY"
   # Docker-react-test-env.eba-ky2b4gv2.eu-central-1.elasticbeanstalk.com
